--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -13,6 +13,15 @@ https://stackoverflow.com/questions/4575826/how-to-push-a-footer-to-the-bottom-o
 Beta style
 */
 
+.navbar{
+  flex-direction: column !important;
+  align-items: flex-end !important;
+}
+
+.navbar-light .navbar-toggler-icon {
+
+}
+
 .navBtn{
   padding-left: 0px !important;
   padding-right: 0px !important;
