--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -190,18 +190,6 @@ h4, .h4 {
   border-bottom: 0px;
 }
 
-.badges-tabs .nav-link {
-  background-color: #21AFFF;
-  color: white;
-  border-bottom: 0px;
-}
-
-.badges-tabs .nav-link.active {
-  background-color: white;
-  border-color: #21AFFF;
-  border-bottom: 0px;
-}
-
 .nav-tabs {
   border-color: #21AFFF;
 }
@@ -213,6 +201,10 @@ h4, .h4 {
   border-right: 1px solid #21AFFF;
   border-radius: 0 0 0.25rem 0.25rem;
   background-color: #FFFFFF;
+}
+
+.badges-code {
+  color: darkred;
 }
 
 select {
