--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -25,8 +25,24 @@ blockquote:not(.important):not(.warning):not(.restricted):not(.experimental):not
   font-size: unset;
 }
 
+
+.preFixed::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+  }
+  
+.preFixed::-webkit-scrollbar-track {
+background-color: aliceblue;
+}
+  
+.preFixed::-webkit-scrollbar-thumb {
+background: rgb(50, 130, 205); 
+border-radius: 10px;
+}
+
 .preFixed {
-  max-height: 200px;
+  max-height: 250px;
+  overflow-y: scroll;
 }
 
 .loader-container {
