--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -439,7 +439,7 @@ h4, .h4 {
 }
 
 .tab-content>.active {
-  padding: 0px 15px 15px 15px;
+  padding: 15px;
   border-bottom: 1px solid #21AFFF;
   border-left: 1px solid #21AFFF;
   border-right: 1px solid #21AFFF;
