nextjs updated to v14

--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -535,7 +535,12 @@ select {
 
 .conan-white-border {
   border: 2px solid white;
+  color: white;
   border-radius: 50px;
+}
+
+.conan-white-border:hover {
+  color: white;
 }
 
 .artifactory-green-gradient-bg {
