--- a/conanio/styles/Laso.module.css
+++ b/conanio/styles/Laso.module.css
@@ -1,18 +1,26 @@
 @charset "UTF-8";
 
 #scholarshipContents {
-
+    line-height: 150%;
 }
 
 #scholarshipContents h2 {
+    font-weight: 700;
     color: #40BE46;
     text-transform: uppercase;
+}
+
+#scholarshipContents h3 {
+    color: #15315B;
+    font-weight: 700;
+    font-size: 28px;
 }
 
 .lasoUnderTitle {
     background-color: #40BE46;
     width: 150px;
     height: 8px;
+    margin: 40px 0;
 }
 
 #scholarshipSummary {
@@ -23,7 +31,7 @@
 
 .scholarshipSummaryCard {
     background-color: #FFFFFFCC;
-    padding: 30px 80px 30px 40px;
+    padding: 30px 40px 30px 40px;
 }
 
 #scholarshipDescription {
@@ -45,13 +53,35 @@
 
 }
 
+.timelineOrder {
+    font-weight: 800;
+    color: #EFEFEF;
+    font-size: 4em;
+    position: absolute;
+    z-index: -1;
+}
+
 .scholarshipTimelineDate {
     color: #000000;
     font-weight: 800;
-    border-bottom: 1px solid #CFEAFC;
+    border-bottom: 4px solid #CFEAFC;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
+
 button.scholarshipApplyBtn {
     background-color: #40BE46;
+    color: #FFFFFF;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 18px 32px 18px 32px;
+    border: none;
+    border-radius: 3px;
+}
+
+button.scholarshipApplyBtn:active {
+    background-color: #298831;
     color: #FFFFFF;
     font-weight: 700;
     text-transform: uppercase;
