--- a/conanio/styles/stylev2.css
+++ b/conanio/styles/stylev2.css
@@ -384,13 +384,26 @@ border-radius: 10px;
 .audit-banner {
   font-size: 1.22rem;
   background-position:center center;
-  background-image: linear-gradient(to right, #485f83, #3d5274, #314565, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #314565, #3d5274, #485f83);
+  background: linear-gradient(to right, #485f83, #3d5274, #314565, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #0C1D37, #314565, #3d5274, #485f83);
 }
 
 .audit-banner a {
   color: white;
 }
 .audit-banner a:hover {
+  color: #006dcc;
+}
+
+.laso-banner {
+  font-size: 1.22rem;
+  background-position:center center;
+  background: #D3EDFF;
+}
+
+.laso-banner a {
+  color: #006dcc;
+}
+.laso-banner a:hover {
   color: #006dcc;
 }
 
